--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tiptap/pm": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
     "@tiptap/vue-3": "^2.0.0-beta.220",
+    "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
     "lowlight": "^2.8.1",
