--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@pinia/nuxt": "^0.4.7",
     "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.220",
     "@tiptap/extension-color": "^2.0.0-beta.220",
+    "@tiptap/extension-hard-break": "^2.0.3",
     "@tiptap/extension-text-align": "^2.0.2",
     "@tiptap/extension-text-style": "^2.0.0-beta.220",
     "@tiptap/pm": "^2.0.0-beta.220",
