--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tiptap/pm": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
     "@tiptap/vue-3": "^2.0.0-beta.220",
+    "@vuepic/vue-datepicker": "^5.1.0",
     "animate": "^1.0.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha1",
