--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.220",
     "@tiptap/extension-color": "^2.0.0-beta.220",
     "@tiptap/extension-hard-break": "^2.0.3",
+    "@tiptap/extension-link": "^2.0.3",
     "@tiptap/extension-list-item": "^2.0.3",
     "@tiptap/extension-ordered-list": "^2.0.3",
     "@tiptap/extension-text-align": "^2.0.2",
