--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "^18.15.3",
     "nuxt": "^3.3.1",
     "sass": "^1.59.3",
@@ -31,6 +32,7 @@
     "@tiptap/vue-3": "^2.0.0-beta.220",
     "@vuepic/vue-datepicker": "^5.1.0",
     "animate": "^1.0.0",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
