--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue-easy-lightbox": "^1.16.0",
     "vue-recaptcha": "^3.0.0-alpha.2",
     "vue-recaptcha-v3": "^2.0.1",
+    "vuedraggable": "^2.24.3",
     "wowjs": "^1.1.3"
   }
 }
