--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "html2canvas": "^1.4.1",
     "lowlight": "^2.8.1",
     "pinia": "^2.0.33",
     "swiper": "^9.2.4",
