--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "upgrade": "nuxi upgrade"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
     "@types/node": "^18.15.3",
-    "nuxt": "^3.6.5",
+    "nuxi": "^3.8.3",
+    "nuxt": "^3.7.4",
     "sass": "^1.59.3",
     "vue-tsc": "^1.0.13"
   },
@@ -34,7 +36,7 @@
     "animate": "^1.0.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.3.5",
-    "bootstrap": "^5.3.0-alpha1",
+    "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.10.3",
     "highlight.js": "^11.8.0",
     "html2canvas": "^1.4.1",
