--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "upgrade": "nuxi upgrade"
+    "upgrade": "nuxi upgrade --force"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
     "@types/node": "^18.15.3",
     "nuxi": "^3.8.3",
-    "nuxt": "^3.7.4",
+    "nuxt": "^3.9.0",
     "sass": "^1.59.3",
     "vue-tsc": "^1.0.13"
   },
@@ -48,6 +48,9 @@
     "vue-recaptcha": "^3.0.0-alpha.2",
     "vue-recaptcha-v3": "^2.0.1",
     "vuedraggable": "^2.24.3",
-    "wowjs": "^1.1.3"
+    "wowjs": "^1.1.3",
+    "nuxt": "3.9.0",
+    "vue": "3.4.0-beta.3",
+    "vue-router": "latest"
   }
 }
