--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
+    // "preinstall": "npx only-allow pnpm",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -18,7 +18,7 @@
     "vue-tsc": "^1.0.13"
   },
   "overrides": {
-    "vue": "3.4.0-beta.3"
+    "vue": "3.4.27"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
@@ -50,7 +50,7 @@
     "vuedraggable": "^2.24.3",
     "wowjs": "^1.1.3",
     "nuxt": "3.9.0",
-    "vue": "3.4.0-beta.3",
+    "vue": "3.4.27",
     "vue-router": "latest"
   }
 }
