--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
     "@types/aos": "^3.0.4",
     "@types/node": "^18.15.3",
     "nuxi": "^3.8.3",
-    "nuxt": "^3.9.0",
+    "nuxt": "^3.12.2",
     "sass": "^1.59.3",
     "vue-tsc": "^1.0.13"
-  },
-  "overrides": {
-    "vue": "3.4.27"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
@@ -38,18 +35,18 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.10.3",
+    "csstype": "^3.1.3",
     "highlight.js": "^11.8.0",
     "html2canvas": "^1.4.1",
     "lowlight": "^2.8.1",
     "pinia": "^2.1.7",
     "swiper": "^9.2.4",
+    "vue": "^3.4.27",
     "vue-easy-lightbox": "^1.16.0",
     "vue-recaptcha": "^3.0.0-alpha.2",
     "vue-recaptcha-v3": "^2.0.1",
+    "vue-router": "latest",
     "vuedraggable": "^2.24.3",
-    "wowjs": "^1.1.3",
-    "nuxt": "3.9.0",
-    "vue": "3.4.27",
-    "vue-router": "latest"
+    "wowjs": "^1.1.3"
   }
 }
